# prism

./: .clang-format  CMakeLists.txt
src/: TEMP.h  bvh.c  bvh.h  logger.c  logger.h  main.c  memory_util.c  memory_util.h  util.h
src/geometry/: geometry.h  triangle_mesh.h
src/math/: bbox.c  bbox.h  math.h  ray.h  vector.c  vector.h
